Adding basic css styles

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
-    <!-- <link rel="stylesheet" href="./src/css/style.css" /> -->
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
-    <h1>To Do List</h1>
     <div class="form-container">
-      <input type="text" placeholder="Add your task here!" class="addTask" />
-      <button class="addButton">Add Task</button>
+      <h1>To Do List</h1>
+      <input type="text" placeholder=" Add your task here!" class="inputBox" />
+      <button class="inputBtn">Add Task</button>
 
-      <input type="text" placeholder="Search box" class="searchTask" />
-      <button class="addButton">Search</button>
+      <input type="text" placeholder=" Search box" class="inputBox" />
+      <button class="inputBtn">Search</button>
     </div>
 
     <div class="list-container"></div>
