Finishing the layout

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
         </div>
 
         <div class="checkDelete">
-          <button class="check"></button>
-          <button class="delete"></button>
+          <button class="checkBtn">
+            <img src="./src/assets/check.svg" alt="" class="checkImg" />
+          </button>
+          <button class="deleteBtn">
+            <img src="./src/assets/delete.svg" alt="" class="deleteImg" />
+          </button>
         </div>
       </div>
     </div>
