Fixing some js issues

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
 
         <div class="checkDelete">
-          <button class="checkBtn">
+          <button class="checkBtn" id="checkBtn">
             <img src="./src/assets/check.svg" alt="" class="checkImg" />
           </button>
-          <button class="deleteBtn">
+          <button class="deleteBtn" id="deleteBtn">
             <img src="./src/assets/delete.svg" alt="" class="deleteImg" />
           </button>
         </div>
