Trying some features in the item list tasks with the Js file

--- a/index.html
+++ b/index.html
@@ -29,23 +29,7 @@
       <button class="inputBtn">Search</button>
     </div>
 
-    <div class="list-container" id="list-container">
-      <!-- <div class="task_details">
-        <div class="task">
-          <p class="task_date">Date: MM/DD/YYYY</p>
-          <p class="task_description">Task description:</p>
-        </div>
-
-        <div class="checkDelete">
-          <button class="checkBtn" id="checkBtn">
-            <img src="./src/assets/check.svg" alt="" class="checkImg" />
-          </button>
-          <button class="deleteBtn" id="deleteBtn">
-            <img src="./src/assets/delete.svg" alt="" class="deleteImg" />
-          </button>
-        </div>
-      </div> -->
-    </div>
+    <div class="list-container" id="list-container"></div>
 
     <div class="reference">
       <p>Github: @RandyMj</p>
